# Automend_Stackoverflow_pipeline

./: .dvcignore  .env  .gitignore  README.md  docker-compose.yaml  dvc.yaml  dvc_setup.cmd  params.yaml  pyproject.toml  requirements.txt
.dvc/: .gitignore
dags/: automend_pipeline_dag.py
data/training/: .gitignore  training_stats.json
data/validated/: .gitignore
logs/: acquisition_stats.json  alerts_history.json  preprocessing_stats.json
reports/bias/: bias_metrics.json  bias_report.json
reports/statistics/: data_statistics.json
reports/validation/: anomalies.json  validation_metrics.json  validation_report.json
scripts/: alerts.py  bias_detection.py  config.py  data_acquisition.py  data_preprocessing.py  data_validation.py  generate_training_data.py  schema_validation.py
tests/: test_modules.py
